--- a/assets/less/abstracts/variables.less
+++ b/assets/less/abstracts/variables.less
@@ -31,7 +31,7 @@
 @breakpoint-medium-max-width:767.98px;
 @breakpoint-large-max-width:991.98px;
 @breakpoint-huge-max-width:1199.98px;
-@breakpoint-laptop-max-width:1360.98px;
+@breakpoint-laptop-max-width:1370.98px;
 
 @primary-color:#6d7381!important;
 @secondary-color: #f0f0f0!important;
@@ -44,7 +44,7 @@
 @light-color: #8698B2!important;
 @dark-color: #383838!important;
 @yellow-color: #E6762F!important;
-@green-color: #383838!important;
+@green-color: #72A05F!important;
 @footer-color: #242424!important;
 @muted-color: #6c757d!important;
 @white-color: #ffffff!important;
@@ -62,7 +62,7 @@
 @date-text-color: #E6762F;
 @link-text-color: #E6762F;
 @button-text-color: #FFFFFF;
-@button-background-color: #383838;
+@button-background-color: #E6762F;
 
 @footer-text-color: #ffffff;
 // Components
