--- a/assets/less/base/typography.less
+++ b/assets/less/base/typography.less
@@ -74,7 +74,7 @@ h1,.h1, h2,.h2, h3,.h3, h4,.h4, h5,.h5, h6,.h6,.title {
       margin-bottom: 0;
       text-align: center;
       color: @heading-text-color;
-
+      font-weight: bold;
       &.inner-page{
         margin-bottom: @margin-base-space!important;
         text-transform: none;
