--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -1,6 +1,6 @@
-[menu]
+[menu main]
 start = "id-1"
-activeNode = "id-1"
+activeNode = 0
 listItemClasses = "nav-item"
 primaryClasses = "navbar-nav"
 secondaryClasses = "dropdown-menu"
@@ -8,7 +8,7 @@ numberOfLevels = 2
 
 [menu login]
 start = "id-23"
-activeNode = "id-10"
+activeNode = "id-24"
 listItemClasses = "item"
 primaryClasses = "nav nav-pills"
 secondaryClasses = "dropdown-menu"
@@ -34,21 +34,29 @@ numberOfLevels = 2
 		<span></span>
 		<span></span>
 		<span></span>
-		{% component 'menu' %}
+		{% component 'main' %}
+
 	</div>
-	<a href="{{'home'|page}}" class="navbar-brand" style="background-image: url('{{ this.theme.site_logo.getPath() }}'); background-position: center; background-size: contain;">
+	<a href="{{'home'|page}}" class="navbar-brand" style="background-image: url('{{ this.theme.site_logo.getPath() }}'); background-position: center; background-size: contain;
+	{% if user and page_id != 'home' %}
+	height: 95px;
+    margin: 18px 0px 20px 20px;
+    flex-basis: 83px;  {% endif %}">
 
     </a>
 
-        <div class="navbar-collapse collapse end-xs" id="headerNavbarNav" style="display: none;">
-			{% component 'menu' %}
+        <div class="navbar-collapse collapse end-xs" style="display: none;">
+			<div id="headerNavbarNav" style="position: fixed; right: 72px;   {% if user %} top: 83px; {% else%} top: 14px;{% endif %}">
+				{% component 'main' %}
+			</div>
+
 			<div id="headerNavbarLogin">
 				<ul class="navbar-nav" style="padding: 0; margin: 0;">
 
 				</ul>
 			</div>
 		</div>
-		<a class="pr p-search large search-btn" onclick="showSearchForm();"></a>
+		<a class="pr p-search medium search-btn"  style="position: fixed; right: 0px;   {% if user %} top: 83px; {% else%} top: 20px;{% endif %}" onclick="showSearchForm();"></a>
 
 		<div id="search" class="search" style="display: none;">
 			<form class="input-group align-items-start" action="{{ url('search')}}" method="get">
