--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -38,8 +38,8 @@ button:not(:disabled) {
         padding-bottom: 0 !important;
         padding-left: 0 !important;
         line-height: unset!important;
-        border-top-right-radius: 50px;
-        border-bottom-right-radius: 50px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
         .border-bottom();
         .border-top();
         .border-right();
@@ -94,29 +94,49 @@ button:not(:disabled) {
     color: @white-color;
     background-color: @button-background-color;
     border-color: @button-background-color;
-    .rounded(50px);
+    .rounded(10px);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    font-weight: bold;
+    .breakpoint-small-down({
+      padding-left: 20px;
+      padding-right: 20px;
+    });
+  &.green_btn{
+    background: @green-color;
+    font-weight: normal;
+    border: none;
+    width: fit-content;
+    &.active{
+      opacity: 0.6;
+    }
+  }
 }
 
 .btn-primary:hover, .btn-primary.active {
     color: @white-color;
     background-color: @link-color;
     border-color: @link-color;
-    .rounded(50px);
+    opacity: 0.6;
+    .rounded(10px);
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    &.green_btn{
+      background: @green-color;
+      font-weight: normal;
+      border: none;
+    }
 }
 
 .btn-secondary {
     color: @white-color;
     background-color: @secondary-btn-color;
     border-color: @secondary-color;
-    .rounded(50px);
+    .rounded(10px);
     padding: 15px 30px;
     &.width100{
       width: 100%;
