--- a/assets/less/components/card.less
+++ b/assets/less/components/card.less
@@ -24,32 +24,34 @@
 
 .card_image_container{
   display: flex;
-  background-size: 80px!important;
-  height: 180px;
-  width: 180px;
-  background-color: @white-color!important;
-  border-radius: 50%;
+  background-size: 65px!important;
+  height: 170px;
+  width: 170px;
+  background-color: #E6E6E6!important;
+  border-radius: 10px;
   margin: 25px auto;
-  border: 2px solid @link-color;
+  border: none;
   &:hover{
     background-color: @link-color!important;
   }
-  .breakpoint-small-down({
-    width: 150px!important;
-    height: 150px!important;
-    background-size: 60px!important;
-  })
+  //.breakpoint-small-down({
+  //  width: 150px!important;
+  //  height: 150px!important;
+  //  background-size: 60px!important;
+  //})
 }
 
-
 .newsletters,
+.press-releases,
 .logo,
+.videos,
+.templates,
 .flyer{
   .card_image_container{
     display: flex;
     background-size: unset!important;
-    height: 220px;
-    width: 220px;
+    height: unset;
+    width: unset;
     background-color: @white-color!important;
     border-radius: 10px;
     margin: 27px auto;
@@ -57,22 +59,49 @@
     &:hover{
       opacity: 0.7;
     }
-    .breakpoint-small-down({
-      width: 220px!important;
-      height: 220px!important;
-      background-size: unset!important;
-    });
+    //.breakpoint-small-down({
+    //  width: 220px!important;
+    //  height: 220px!important;
+    //  background-size: unset!important;
+    //});
+  }
+
+  .btn-primary{
+    font-weight: normal;
   }
 }
 
 .logo .card_image_container{
   border-radius: 0;
   background-size: 50%!important;
+  img{
+    object-fit: contain;
+    width: 102px;
+    height: 122px;
+    margin: 0 auto;
+  }
 }
 
 a:hover > .card_image_container{
     background: @link-color;
 }
+
+.flyer, .templates{
+  .card_image_container{
+    display: flex;
+    background-size: unset!important;
+    height: 448px;
+    width: auto;
+    background-color: @white-color!important;
+    border-radius: 10px;
+    margin: 27px auto;
+    border: none;
+    &:hover{
+      opacity: 0.7;
+    }
+  }
+}
+
 
 .card-carousel {
   display: flex;
