--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -1,4 +1,3 @@
-
 .navbar {
     position: relative;
     width: 100vw;
@@ -7,14 +6,18 @@
     justify-content: space-between;
     align-items: center;
     color: @navbar-color;
-    //background-color: transparent;
-    transition: background-color 0.3s;
+    background-color: transparent;
     box-sizing: border-box;
-    background: #ffffff;
-    -moz-box-shadow: 0 0 26px rgba(0, 0, 0, 0.2);
-    -webkit-box-shadow: 0 0 26px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0 26px rgba(0, 0, 0, 0.2);
+    height: 300px;
+    transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out; /* Firefox 4 */
+    -webkit-transition: all 0.5s ease-in-out; /* Safari and Chrome */
+    -o-transition: all 0.5s ease-in-out; /* Opera */
+    -ms-transition: all 0.5s ease-in-out; /* Explorer 10 */
 
+    .breakpoint-small-down({
+      align-items: start!important;
+    });
     &:not(.fixed){
         background-color: @navbar-bkg-color;
     }
@@ -34,13 +37,30 @@
 
     .navbar-brand {
       display: flex;
+      text-indent: -9999px;
       flex-basis: 255px;
-      height: 90px;
+      height: 221px;
+      background-size: contain;
       background-repeat: no-repeat;
+      margin: 30px 0px 0 50px;
+      transition: all 0.5s ease-in-out;
+      -moz-transition: all 0.5s ease-in-out; /* Firefox 4 */
+      -webkit-transition: all 0.5s ease-in-out; /* Safari and Chrome */
+      -o-transition: all 0.5s ease-in-out; /* Opera */
+      -ms-transition: all 0.5s ease-in-out; /* Explorer 10 */
+      .breakpoint-small-down({
+        flex-basis: 100%;
+        height: 25vh;
+        margin: 30px 0px 0 0px;
+      });
     }
 
     .navbar-nav{
       list-style-type: none;
+      //position: fixed;
+      //top: 14px;
+      //right: 72px;
+      background: @white-color;
     }
  
     .navbar-collapse {
@@ -60,7 +80,7 @@
             padding-left: 0.5rem;
             padding-right: 0.5rem;
             padding-top: 1rem;
-            padding-bottom: 1rem;
+            //padding-bottom: 1rem;
             justify-content: space-around;
             background-color: inherit;
             flex-direction: column;
@@ -92,6 +112,7 @@
                     text-overflow: ellipsis;
                     overflow: hidden;
                     max-width: 100%;
+                    font-weight: bold;
 
                     &:hover {
                         opacity: 0.6;
@@ -101,6 +122,10 @@
 
                 &.active a{
                   opacity: 0.6;
+                }
+
+                &.active .dropdown-menu a{
+                  opacity: 1!important;
                 }
 
                 background-color: inherit;
@@ -113,6 +138,9 @@
                         background-color: inherit;
                         display: block;
                         padding-left: 0;
+                      a:hover{
+                        opacity: 0.6!important;
+                      }
                     }
                 }
             }
@@ -163,9 +191,9 @@
                         .dropdown-menu {
                             display: none;
                             position: absolute;
-                            top: 73px;
-                            padding-left: 0;
-                            padding-top: 15px;
+                            top: 63px;
+                            margin-left: 20px;
+                            padding-top: 0px;
                         }
                     }
                 }
@@ -174,23 +202,63 @@
     });
 }
 
+
+.content-wrapper:not(.home){
+  .navbar{
+    height: 95px;
+    background: @white-color;
+  }
+
+  .navbar-brand {
+    height: 95px;
+    flex-basis: 115px;
+    .breakpoint-small-down({
+      margin: 18px 0px 20px 20px!important;
+    });
+
+  }
+
+}
+
+.shrink.navbar {
+  height: 115px;
+  background: @white-color;
+
+  .navbar-brand {
+    height: 75px!important;
+    margin: 18px 0px 20px 20px!important;
+    flex-basis: 83px!important;
+    .breakpoint-small-down({
+      margin: 8px 0px 20px 20px!important;
+    });
+  }
+
+  .navbar-nav {
+    list-style-type: none;
+  }
+}
+
 .full-width .search {
   background: @white-color;
   position: absolute;
-  top: 90px;
+  top: 95px;
   width: 100%;
-  height: 75px;
+  height: 107px;
   /* max-width: 1600px; */
   left: 0;
   right: 0;
   z-index: 1;
-  -moz-box-shadow: 0 15px 13px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 15px 13px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 15px 13px rgba(0, 0, 0, 0.1);
-
+  .breakpoint-small-down({
+    top: 637px;
+    width: 71%;
+  });
   form{
-    max-width: 1600px;
-    margin: 0 auto;
+    max-width: 1330px;
+    float: right;
+    margin: 25px 45px 0 0;
+    .breakpoint-small-down({
+      margin: 0;
+    });
   }
 
   .text-grey-search-btn{
@@ -206,11 +274,11 @@
     padding-bottom: 0 !important;
     padding-left: 0 !important;
     line-height: unset !important;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    border-bottom: 1px solid #d1d1d1;
-    border-top: 1px solid #d1d1d1;
-    border-right: 1px solid #d1d1d1;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom: 1px solid #C1C1C1;
+    border-top: 1px solid #C1C1C1;
+    border-right: 1px solid #C1C1C1;
   }
 
   &.content-wrapper, &#layout-content{
@@ -227,11 +295,21 @@
     left: 0;
     right: 0;
     z-index: 1;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
     margin:  0 auto;
   })
+}
+
+.home .full-width .search {
+  background: none;
+  position: absolute;
+  top: 95px;
+  width: 100%;
+  height: 75px;
+  /* max-width: 1600px; */
+  left: 0;
+  right: 0;
+  z-index: 1;
+
 }
 
 nav .pr.p-search.large.search-btn{
@@ -243,6 +321,12 @@ nav .pr.p-search.large.search-btn{
 .search-btn{
   margin-right: 20px;
   cursor: pointer;
+  .breakpoint-small-down({
+    display: none!important;
+  });
+  //position: fixed;
+  //top: 20px;
+  //right: 0px;
 }
 
 #menuToggle{
@@ -257,7 +341,7 @@ nav .pr.p-search.large.search-btn{
     display: flex;
     flex-direction: column;
     position: relative;
-    //top: 25px;
+    top: 35px;
     left: -22px;
     z-index: 1;
     -webkit-user-select: none;
