--- a/assets/less/pages/events.less
+++ b/assets/less/pages/events.less
@@ -15,20 +15,20 @@
 }
 .events .tabs
 .fc-button-group > .fc-button, .fc-button-group > .fc-button:not(:first-child){
-  background: @green-color!important;
+  background: @default-color!important;
   color: @white-color!important;
-  border-radius: 30px!important;
-  border: 1px solid @green-color;
+  border-radius: 10px!important;
+  border: 1px solid @default-color;
 }
 
 .fc-button-group > .fc-today-button, .fc-button-group > fc-prev-button{
-  border-radius: 50%;
+  border-radius: 10px;
 }
 
 .fc-button-group > .fc-button:hover, .fc-button-group > .fc-button:not(:first-child):hover, .fc-button-primary:not(:disabled).fc-button-active{
-  background: @link-color!important;
-  color:@white-color!important;
-  border: 1px solid @link-color!important;
+  background: none!important;
+  color:@default-color!important;
+  border: 1px solid @default-color!important;
 }
 
 .fc-button-group > .fc-button{
@@ -64,11 +64,16 @@
   order: 3;
 }
 .fc-button{
-  border-radius: 50px!important;
+  border-radius: 10px!important;
   .breakpoint-small-down({
     margin: 20px 5px 10px 5px!important;
   });
 
+}
+
+.fc-view-container{
+  background: @white-color;
+  padding: 20px;
 }
 
 .fc-left .fc-button{
@@ -87,8 +92,8 @@
 }
 
 .fc-event{
-  background: @link-color!important;
-  border-color: @link-color!important;
+  background: #406144!important;
+  border-color: #406144!important;
   padding: 10px!important;
   border-radius: 10px!important;
 }
@@ -102,22 +107,28 @@
   background: url(../../assets/images/calendar_blue.svg) left no-repeat;
   padding-left: 25px;
   background-size: 17px;
-  margin: 40px 0 10px 20px;
+  margin: 40px 0 10px 0px;
 }
 .event-place{
   color: @yellow-color;
   background: url(../../assets/images/location_blue.svg) left no-repeat;
   padding-left: 25px;
   background-size: 15px;
-  margin-left: 20px;
+  margin-bottom: 20px;
 }
 
+
+.events .single-news-item{
+  .event-place, .event-date{
+    margin-left: 20px;
+  }
+}
 .events .tabs{
   margin-bottom: 40px;
   width: 100%;
   display: block;
   //float: right;
-  text-align: right;
+  text-align: left;
   .btn-primary{
     .breakpoint-small-down({
       margin-bottom: 20px;
@@ -128,10 +139,23 @@
     text-align: center;
   });
   a{
-    margin-left: 20px;
     width: fit-content;
     font-weight: bold;
     cursor: pointer;
+    padding-left: 28px;
+    margin-right: 30px;
+    &.calendar_vew{
+      background: url("../../assets/images/calendar_view.svg") left center no-repeat;
+      background-size: 20px;
+    }
+    &.grid_vew{
+      background: url("../../assets/images/grid.svg") left center no-repeat;
+      background-size: 20px;
+    }
+    &.list_vew{
+      background: url("../../assets/images/list.svg") left center no-repeat;
+      background-size: 20px;
+    }
     .breakpoint-small-down({
       margin-left: 0px;
       width: 100%;
@@ -139,8 +163,8 @@
     });
 
     &.active{
-      opacity: 0.6;
-      display: none;
+      opacity: 0.5;
+      //display: none;
     }
   }
 
@@ -172,8 +196,9 @@
 
 .events_list_container{
   .rounded(4px);
-  box-shadow: 0 6px 27px rgba(0, 0, 0, 0.3);
   width: 100%;
+  border: 1px solid #C1C1C1;
+  background: @white-color;
 
   .event_list_item{
     padding: 27px 35px;
@@ -184,6 +209,7 @@
     .time_and_date{
       color: @link-color;
       font-weight: bold;
+      font-size: 22px;
     }
   }
 }
