--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -4,13 +4,13 @@
   })
 }
 .library-item{
-  background: #fff;
+  background: #efefef;
   padding: 30px!important;
   margin: 30px 0!important;
   color: @dark-color!important;
   font-size: 16px;
-  box-shadow: 0 6px 27px rgba(0, 0, 0, 0.3);
-  .rounded(10px);
+  .rounded(4px);
+  border: 1px solid #c1c1c1;
 
   .row{
     -webkit-box-align: center;
@@ -162,8 +162,8 @@
     padding-bottom: 0 !important;
     padding-left: 0 !important;
     line-height: unset !important;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     border-bottom: 1px solid #d1d1d1;
     border-top: 1px solid #d1d1d1;
     border-right: 1px solid #d1d1d1;
