--- a/assets/less/pages/partners.less
+++ b/assets/less/pages/partners.less
@@ -133,132 +133,88 @@ ul.partners_logos_list li:hover{
 
 }
 
-.countries_list{
-  margin-top: 50px;
-  .country_map{
-    width: 47px;
-    height: 47px;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    border: 2px solid @link-color;
-    border-radius: 50%;
-    padding: 40px;
-    background: @white-color;
-    &:hover{
-      background: @link-color;
-    }
-  }
-  .country_label{
-    text-align: center;
-    color: #2F2F2F;
-    width: 135px;
-    padding: 10px 0;
-    margin-bottom: 20px;
-  }
-}
-
-.partners_list .list{
-  display: flex;
-  flex-direction: row;
-  .breakpoint-large-down({
-    flex-direction: column;
-  });
-
-  .list-item{
-    box-shadow: 0 6px 27px rgba(0, 0, 0, 0.3);
-    .rounded(10px);
-    margin: 34px 34px 0 0;
-    padding: 34px;
-    max-width: 22%;
-    flex-basis: 22%;
-    display: inline;
-    background: @white-color;
-    a{
-      text-align: left;
-    }
-    a:first-child{
-      width: 100%;
-      height: 50px;
-      display: block;
-    }
-    .list-item-image{
-      //background-size: auto 50px!important;
-      background-size: contain!important;
-      max-width: 100%!important;
-      flex-basis: 100%!important;
-      padding: 0;
-      width: auto;
-      height: 50px;
-      //height: auto!important;
-      //width: auto!important;
-      //max-height: 50px!important;
-    }
-    .list-item-column{
-      padding: 0;
-    }
-    .list-item-column .btn{
-      margin-top: 20px;
-      color: @link-color;
-      background: none;
-      border: none;
-      padding: 0;
-    }
-
-    h3{
-      display: none;
-    }
-    .info{
-      display: none;
-    }
-    .breakpoint-large-down({
-      max-width: 100%;
-      flex-basis: 100%;
-      margin: 34px 0 0 0;
-    })
-  }
-}
-
 .partners_list{
   margin-top: 50px;
   img{
-    width: 100%;
-    max-width: fit-content!important;
+    .rounded(10px);
   }
   .partner-item{
-    box-shadow: 0 6px 27px rgba(0, 0, 0, 0.3);
     .rounded(10px);
-    margin: 34px 34px 0 0;
-    padding: 34px;
-    max-width: 22%;
-    flex-basis: 22%;
-    background: @white-color;
-    .partner_cover{
-      margin-bottom: 20px;
+    width: 162px!important;
+    max-width: 162px;
+    min-width: 162px;
+    height: 162px;
+    background: @white-color!important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 23px;
+    margin-bottom: 23px;
+    &:nth-of-type(2n){
+      .breakpoint-small-down({
+        margin-right: 0;
+      });
     }
 
-    .partner_website{
-      margin-top: 20px;
+    a{
+      display: flex;
+      width: 162px!important;
+      max-width: 162px;
+      min-width: 162px;
+      height: auto;
     }
-    .breakpoint-large-down({
-      max-width: 100%;
-      flex-basis: 100%;
-
-    })
   }
 }
 
-.dorsal{
-  display: block;
-  cursor: pointer;
-  color: @link-color;
-  margin-top: 10px;
+.breadcrumb-fancy{
+  font-weight: bold;
+  padding-left: 0!important;
+  a{
+    color: @link-color;
+    margin-right: 20px;
+  }
+  a.active{
+    color: @link-color;
+    opacity: 0.4;
+    margin-right: 20px;
+  }
 }
 
-.toogle-contact-paragraphs { display: none; }
 
-.see_all_partners_link{
-  width: 100%;
+.partners_filter_form{
+  margin-top: 150px;
+  margin-bottom: 50px;
+  margin-left: 10px;
+
+  input{
+    margin: 0 auto;
+  }
+  select{
+    margin-right: 15px;
+  }
+}
+.partners{
+  //.fields {
+  //  display: flex;
+  //  margin: 0 -.5rem;
+  //  flex-direction: row!important;
+  //
+  //  .field + .field {
+  //    margin-top: 0!important;
+  //  }
+  //
+  //  &.inline {
+  //    flex-direction: row;
+  //    .field {
+  //      margin-top: 0;
+  //    }
+  //  }
+  //  .field {
+  //    padding-left: .5rem;
+  //    padding-right: .5rem;
+  //    clear: both;
+  //    margin: 0;
+  //  }
+  //}
 }
 
