--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -1,7 +1,7 @@
 html,body {
     //font-family: @font-family, Arial, sans-serif;
     font-family: Muli;
-    background-color: @background-color;
+    background-color: @white-color;
     color: @text-color-default;
     font-weight: normal;
     height: 100%;
@@ -45,6 +45,14 @@ h1, h2{
   })
 }
 
+h1.display-1{
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
 .head{
   color: @white-color;
 }
@@ -75,7 +83,7 @@ h1, h2{
     .header-image-bar:not(.home) {
         width: 100%;
         height: 315px;
-        margin-top: 90px;
+        margin-top: 130px;
         background-size: cover;
         background-position: center;
         //background-position-y: 31px!important;
@@ -96,26 +104,28 @@ h1, h2{
         &.underline {
             padding-left: 1rem;
             padding-right: 1rem;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
             font-size: 52px;
             line-height: 52px;
             color: @white-color;
             //width: 1146px;
             //text-align: center;
             &.home-page-header{
-              font-size: 75px;
+              font-size: 70px;
               font-weight: 600;
-              line-height: 105px;
-
+              line-height: 85px;
+              color: @default-color;
+              text-transform: uppercase;
+              font-weight: bold;
               .breakpoint-small-down({
-                  font-size: 83px;
+                  font-size: 63px;
               });
               .breakpoint-huge-down({
                 width: auto!important;
               });
               .breakpoint-laptop-down({
-                font-size: 70px;
-                line-height: 70px;
+                font-size: 60px;
+                line-height: 60px;
                 margin-bottom: 10px;
                 margin-top: 20px;
               });
@@ -132,20 +142,21 @@ h1, h2{
     .jumbotron{
       max-width: 40%;
       //max-width: 1057px;
-      padding: 0 100px;
+      padding: 0 60px;
       margin: 0;
       position: absolute;
-      top: 50%;
+      top: 55%;
       transform: translateY(-39.5%) !important;
-      .breakpoint-laptop-down({
-        padding: 0 0px;
-        max-width: 45%;
-      });
+      //.breakpoint-laptop-down({
+      //  padding: 0 0px;
+      //  max-width: 45%;
+      //});
 
       .breakpoint-large-down({
         max-width: 100%;
+        margin: 20px auto;
         text-align: center;
-        padding: 0 50px;
+        padding: 0 30px;
       });
 
       p{
@@ -153,6 +164,7 @@ h1, h2{
         line-height: 1.3em;
         padding-left: 20px;
         margin-top: 10px;
+        color: @link-color!important;
         .breakpoint-laptop-down({
           font-size: 35px;
         });
@@ -178,12 +190,16 @@ h1, h2{
 
     &.home {
         .header-image-bar {
-          height: calc(~"100vh - 90px");
-          margin-top: 90px;
+          //height: 100vh;
+          height: calc(~"100vh - 75px");
+          //margin-top: 95px;
           position: relative;
+          background: url("../../assets/images/homepage_illustration.svg") right center no-repeat!important;
+          background-position: contain!important;
             .breakpoint-large-down({
               height: 100vh;
               margin-top: 0;
+              background: none!important;
             });
         }
         h1 {
@@ -191,7 +207,7 @@ h1, h2{
                 border-bottom: none;
                 .breakpoint-small-down({
                   font-size: 55px;
-                  white-space: nowrap;
+                  line-height: 59px!important;
                   padding: 0;
                 });
             }
@@ -206,21 +222,39 @@ h1, h2{
     });
 }
 
+.header-image:not(.home){
+  .jumbotron{
+    max-width: 100%!important;
+    width: 100%!important;
+    //max-width: 1057px;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 66%;
+    //transform: translateY(-39.5%) !important;
+    text-align: center;
+    font-weight: bold;
+    .breakpoint-laptop-down({
+      padding: 0 0px;
+      max-width: 45%;
+    });
+
+    .breakpoint-large-down({
+      max-width: 100%;
+      text-align: center;
+      padding: 0;
+    });
+  }
+}
+
 #layout-content {
     padding-bottom: 345px;
 }
 
 .partners_background{
-  background: url(../../assets/images/map.jpg) top right no-repeat;
-  background-size: 50%;
-  .breakpoint-small-down({
-    background: none;
-  })
+  background: #E4E7E7;
 }
 
-#layout-content:not(.home){
-  margin-top: 90px;
-}
 
 .content-wrapper{
   min-height: 100%;
@@ -297,6 +331,11 @@ h1, h2{
       height: auto;
     });
 
+    .btn{
+      .breakpoint-small-down({
+        width: 70%;
+      })
+    }
     .icons{
       width: 48px;
       height: 48px;
@@ -307,10 +346,23 @@ h1, h2{
 
     .head{
       font-size: 20px;
+      text-transform: uppercase;
       .breakpoint-small-down ({
         margin: 30px auto 20px auto;
       })
     }
+
+  .footer-menu-item{
+    font-size: 18px;
+    padding-top: 5px;
+  }
+
+  .btn-primary{
+    padding: 6px 35px;
+    line-height: 36px;
+    display: inline-flex;
+  }
+
 }
 
 .bd-example {
@@ -378,6 +430,13 @@ h1, h2{
 }
 .subscribe_holder_bg{
   background: url("../../assets/images/homepage.jpg") center no-repeat;
+  background-size: cover;
+
+
+  a.pr{
+    color: @default-color!important;
+  }
+
 }
 .subscribe-container {
     display: flex;
@@ -416,11 +475,15 @@ h1, h2{
   margin-bottom: 30px;
   a{
     margin-right: 20px;
+
     .breakpoint-large-down({
     margin: 0 10px;
-    })
+    });
+
+
   }
 }
+
 
 .content_static_list{
   list-style-type: none;
@@ -553,33 +616,25 @@ footer .align-items-center{
 
   .split {
     min-height: 700px;
-    //height: -moz-calc(100% - (20px + 20px));
-    //height: -webkit-calc(100% - (20px + 20px));
-    //height: calc(100% - (20px + 20px));
     height: -moz-calc(100vh - (20px + 20px));
     height: -webkit-calc(100vh - (20px + 20px));
     height: calc(100vh - (20px + 20px));
     display:block;
     width: 50%;
-    //display: flex;
-    //flex-direction: column;
-    //flex: 1;
-    //padding: 1rem;
     position: sticky;
     z-index: 1;
     top: 90px;
-    //overflow-x: hidden;
     padding-top: 20px;
 
     .breakpoint-small-down({
       width: 100%;
+      min-height: 500px;
     });
 
     &.left {
-      background: @white-color url(../../assets/images/login.svg) no-repeat;
-      //background-position: center top 200px;
+      background: @white-color url(../../assets/images/login-illustration.svg) no-repeat;
       background-position: center;
-      background-size: 55%;
+      background-size: 33%;
       left: 0;
       h1{
         padding-left: 20%;
