--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -1,5 +1,5 @@
 [menu about_menu]
-start = "id-2"
+start = "id-11"
 activeNode = 0
 listItemClasses = "footer-menu-item"
 primaryClasses = "footer-menu"
@@ -7,7 +7,7 @@ secondaryClasses = "dropdown-menu"
 numberOfLevels = 1
 
 [menu latest_menu]
-start = "id-3"
+start = "id-15"
 activeNode = 0
 listItemClasses = "footer-menu-item"
 primaryClasses = "footer-menu"
@@ -15,7 +15,7 @@ secondaryClasses = "dropdown-menu"
 numberOfLevels = 1
 
 [menu network_menu]
-start = "id-4"
+start = "id-19"
 activeNode = 0
 listItemClasses = "footer-menu-item"
 primaryClasses = "footer-menu"
@@ -33,11 +33,11 @@ theme = "dark-bottom"
 	<div class="container">
 		<div class="row top-xs between-xs footer-menu-container">
 			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
-				<div class="head">ABOUT</div>
+				<div class="head">About</div>
 				{% component 'about_menu' %}
 			</div>
 			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
-				<div class="head">LATEST</div>
+				<div class="head">Latest</div>
 				{% component 'latest_menu' %}
 			</div>
 			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
@@ -46,7 +46,7 @@ theme = "dark-bottom"
 			</div>
 			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
 				{% if (enable_social_media) %}
-				<div class="head">FOLLOW U3G</div>
+				<div class="head">Follow U3G</div>
 				<div class="social-networks">
 					<div class="icons mt-1">
 						{% if enable_facebook and facebook_url %}
@@ -80,8 +80,8 @@ theme = "dark-bottom"
 			{%if this.theme.subscribe%}
 			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
 				<div class="head">Stay up to date</div>
-				<div class="icons mt-1">
-					<a href="{{this.theme.subscribe}}" target="_blank" class="pr p-secondary p-subscribe big"></a>
+				<div class="mt-1">
+					<a href="{{this.theme.subscribe}}" target="_blank" class="btn btn-primary news-alert"><i class="pr p-subscribe"></i> News alert</a>
 				</div>
 			</div>
 			{%endif%}
@@ -93,13 +93,17 @@ theme = "dark-bottom"
 <div class="container-fluid border-box black-background">
 	<div class="row nowrap text-light d-flex justify-content-between align-items-center flex-column flex-lg-row dark-background">
 		{% if (footer_funds_flag != null or footer_funds_text != '') %}
-		<div class="funding flex-column my-1 my-lg-0 flex-lg-row px-1 align-items-center col-sm col-xs-12">
+		<div class="funding flex-column my-1 my-lg-0 flex-lg-row px-1 align-items-center col-sm-1 col-xs-12">
 			{% if footer_funds_flag %}
-			<img class="text mr-0 mr-lg-1" style="height:50px;" src="{{ footer_funds_flag }}"/>
+			<img class="text mr-0" style="height:50px;" src="{{ footer_funds_flag }}"/>
 			{% endif %}
 
 		</div>
 		{% endif %}
+		<div class="funding flex-column my-1 my-lg-0 flex-lg-row px-1 align-items-center col-sm col-xs-12">
+			<img class="text mr-0" style="height:50px;" src="{{'cost_logo-white.svg'|media}}"/>
+		</div>
+
 		<div class="col-sm-1 col-xs-12 center-xs"><a style="flex:0 0 auto;" href="/privacy-policy">Privacy Policy</a></div>
 		<div class="col-sm-2 col-xs-12 end-sm center-xs"><div class="powered-by my-1 my-lg-0 px-1 align-items-center end-sm center-xs"><span>Designed and powered by <a href="https://pensoft.net/" target="_blank">Pensoft</a></span></div></div>
 	</div>
