--- a/assets/less/components/form.less
+++ b/assets/less/components/form.less
@@ -15,6 +15,7 @@
             flex-direction: row;
             .field {
                 margin-top: 0;
+                white-space: nowrap;
 
                 .breakpoint-small-down({
                   margin-bottom: 20px;
