--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -138,6 +138,7 @@
                         background-color: inherit;
                         display: block;
                         padding-left: 0;
+                      background: white;
                       a:hover{
                         opacity: 0.6!important;
                       }
@@ -253,7 +254,7 @@
     width: 71%;
   });
   form{
-    max-width: 1330px;
+    max-width: 70%;
     float: right;
     margin: 25px 45px 0 0;
     .breakpoint-small-down({
