--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -307,6 +307,17 @@ h1.display-1{
         flex: 1 1 14%;
         color: @footer-text-color;
         font-size: 18px!important;
+        max-width: 100px;
+    }
+    .cost {
+        display: flex;
+        flex: 1 1 14%;
+        color: @footer-text-color;
+        font-size: 18px!important;
+      img{
+        margin-right: 20px;
+      }
+
     }
     .powered-by {
         display: flex;
@@ -796,6 +807,10 @@ footer .align-items-center{
   .breakpoint-small-down({
     background: none;
   })
+}
+
+.cc_message{
+  color: @white-color;
 }
 
 
