--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -100,11 +100,11 @@ theme = "dark-bottom"
 
 		</div>
 		{% endif %}
-		<div class="funding flex-column my-1 my-lg-0 flex-lg-row px-1 align-items-center col-sm col-xs-12">
-			<img class="text mr-0" style="height:50px;" src="{{'cost_logo-white.svg'|media}}"/>
+		<div class="cost flex-column my-1 my-lg-0 flex-lg-row px-1 align-items-center col-sm col-xs-12">
+			<img class="text mr-0" style="height:50px;" src="{{'cost_logo-white.svg'|media}}"/> CA20132
 		</div>
 
-		<div class="col-sm-1 col-xs-12 center-xs"><a style="flex:0 0 auto;" href="/privacy-policy">Privacy Policy</a></div>
+		<div class="col-sm-2 col-xs-12 center-xs"><a style="flex:0 0 auto;" href="/privacy-policy">Privacy Policy</a></div>
 		<div class="col-sm-2 col-xs-12 end-sm center-xs"><div class="powered-by my-1 my-lg-0 px-1 align-items-center end-sm center-xs"><span>Designed and powered by <a href="https://pensoft.net/" target="_blank">Pensoft</a></span></div></div>
 	</div>
 </div>
