--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -5,17 +5,22 @@
 }
 .library-item{
   background: #efefef;
-  padding: 30px!important;
+
   margin: 30px 0!important;
   color: @dark-color!important;
   font-size: 16px;
   .rounded(4px);
   border: 1px solid #c1c1c1;
 
+  .p-download{
+    display: none;
+  }
+
   .row{
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    display: flex;
 
     .end-md.end-xs{
       -webkit-box-pack: center;
@@ -24,8 +29,12 @@
       text-align: center;
     }
 
+    .col-md-9{
+      padding: 30px;
+      border-right: 1px solid #d6d6d6;
+    }
     .col-md-3.col-xs-12{
-      text-align: right;
+      text-align: center;
     }
   }
 
@@ -61,22 +70,10 @@
   display: none;
 }
 
-.library .container{
+.publicatons .container{
   position: relative;
   .row.center-xs.mb-1{
-    position: absolute;
-    top: 247px;
-    right: 0px;
-    .breakpoint-large-down({
-      position: absolute;
-      top:  409px;
-      left: 0px;
-    });
-    .breakpoint-small-down({
-      position: absolute;
-      top:  509px;
-      left: 0px;
-    })
+    display: none;
   }
 }
 
@@ -114,6 +111,129 @@
   }
 }
 
+.wiki, .teaching-tools, .links, .gallery{
+  .display-1{
+    text-align: left;
+    margin-top: 0;
+  }
+
+  .library-buttons{
+    display: flex;
+    flex-direction: row;
+    margin-top: 40px;
+    justify-content: space-between;
+    width: 90%;
+  }
+}
+
+.links{
+  .library-buttons{
+    width: 50%;
+  }
+}
+
+
+.gallery-item{
+  display: inline-flex;
+  flex-direction: column;
+  position: relative;
+  margin-bottom: 40px;
+  max-width: 350px;
+  img{
+    border-radius: 10px;
+    width: 350px;
+    height: 340px;
+    object-fit: cover;
+    margin-bottom: 20px;
+  }
+
+  .download-gallery{
+    background: #c1c1c1 url("../../assets/images/download_gallery.svg") center no-repeat;
+    background-size: 18px;
+    position: absolute;
+    right: 40px;
+    top: 290px;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    color: white;
+    .breakpoint-small-down({
+      right: -1px;
+    });
+    &:hover{
+      opacity: 0.8;
+    }
+  }
+  .description{
+  }
+
+  .keywords{
+    background: url("../../assets/images/keywords.svg") left no-repeat;
+    background-position: left top 7px;
+    background-size: 18px;
+    padding-left: 30px;
+    margin-bottom: 20px;
+  }
+  .camera{
+    background: url("../../assets/images/photographer.svg") left center no-repeat;
+    background-size: 21px;
+    padding-left: 30px;
+    font-weight: bold;
+  }
+}
+
+
+
+#myImg {
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 70%;
+  //max-width: 700px;
+}
+
+/* The Close Button */
+.close_modal {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #ffffff!important;
+  font-size: 40px!important;
+  font-weight: bold;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.close_modal:hover,
+.close_modal:focus {
+  color: #f1f1f1;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 #searchLibrary{
   display: inline-block;
   form{
@@ -141,8 +261,8 @@
     -webkit-border-radius: 0px 0px 0px 0px;
     border: 1px solid #d1d1d1;
     border-right: none;
-    .rounded-tl(50px);
-    .rounded-bl(50px);
+    .rounded-tl(10px);
+    .rounded-bl(10px);
   }
 
   .search {
@@ -181,7 +301,7 @@
   })
 }
 
-.library .tabs{
+.publicatons .tabs{
   margin-bottom: 40px;
   width: 100%;
   display: block;
