--- a/assets/less/components/jumbotron.less
+++ b/assets/less/components/jumbotron.less
@@ -104,7 +104,7 @@
   //margin: 0 auto;
   font-size: 1.5em;
   margin-top: 20px;
-  .breakpoint-small-down({
+  .breakpoint-large-down({
     text-align: center;
     margin: 30px auto;
     width: 166px;
