--- a/assets/less/components/timeline.less
+++ b/assets/less/components/timeline.less
@@ -32,6 +32,9 @@
           transition: all .3s ease-in-out;
           box-shadow: none;
           background: @default-color;
+          background-position-x: center!important;
+          background-position-Y: center!important;
+          background-size: cover!important;
           .rounded(10px);
             .timeline-header {
                 display: block;
