--- a/assets/less/pages/contact.less
+++ b/assets/less/pages/contact.less
@@ -39,6 +39,9 @@
     &:last-of-type{
       align-items: top!important;
     }
+    .breakpoint-laptop-down({
+      word-break: break-all;
+    })
   }
   .profile-description{
     margin-top: 20px;
