--- a/assets/less/components/navbar.less
+++ b/assets/less/components/navbar.less
@@ -15,8 +15,9 @@
     -o-transition: all 0.5s ease-in-out; /* Opera */
     -ms-transition: all 0.5s ease-in-out; /* Explorer 10 */
 
-    .breakpoint-small-down({
+    .breakpoint-huge-down({
       align-items: start!important;
+      height: fit-content;
     });
     &:not(.fixed){
         background-color: @navbar-bkg-color;
@@ -48,6 +49,11 @@
       -webkit-transition: all 0.5s ease-in-out; /* Safari and Chrome */
       -o-transition: all 0.5s ease-in-out; /* Opera */
       -ms-transition: all 0.5s ease-in-out; /* Explorer 10 */
+      .breakpoint-huge-down({
+        order: 1;
+        flex-basis: 155px;
+        height: 151px;
+      });
       .breakpoint-small-down({
         flex-basis: 100%;
         height: 25vh;
@@ -135,10 +141,10 @@
                         position: relative;
                         z-index: @zindex-dropdown;
                         top: 0;
-                        background-color: inherit;
                         display: block;
                         padding-left: 0;
-                      background: white;
+                        background: white;
+                        border-radius: 10px!important;
                       a:hover{
                         opacity: 0.6!important;
                       }
@@ -186,6 +192,7 @@
                     &.dropdown {
                          &:hover > .dropdown-menu {
                             display: block;
+                           border-radius: 10px!important;
 
                         }
 
@@ -195,6 +202,8 @@
                             top: 63px;
                             margin-left: 20px;
                             padding-top: 0px;
+                            border-radius: 10px!important;
+
                         }
                     }
                 }
@@ -249,7 +258,7 @@
   left: 0;
   right: 0;
   z-index: 1;
-  .breakpoint-small-down({
+  .breakpoint-large-down({
     top: 637px;
     width: 71%;
   });
@@ -259,6 +268,7 @@
     margin: 25px 45px 0 0;
     .breakpoint-small-down({
       margin: 0;
+      max-width: 100%;
     });
   }
 
@@ -290,7 +300,8 @@
     position: absolute;
     //top: 91vh;
     //width: 70%;
-    top: 770px;
+    //top: 770px;
+    top: 651px;
     width: 300px;
     height: 75px;
     left: 0;
@@ -310,6 +321,10 @@
   left: 0;
   right: 0;
   z-index: 1;
+  .breakpoint-large-down({
+    top: 637px;
+    width: 71%;
+  });
 
 }
 
@@ -322,8 +337,9 @@ nav .pr.p-search.large.search-btn{
 .search-btn{
   margin-right: 20px;
   cursor: pointer;
-  .breakpoint-small-down({
+  .breakpoint-large-down({
     display: none!important;
+    order: 1;
   });
   //position: fixed;
   //top: 20px;
@@ -343,10 +359,11 @@ nav .pr.p-search.large.search-btn{
     flex-direction: column;
     position: relative;
     top: 35px;
-    left: -22px;
+    //left: -22px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
+    order: 3;
   }
 
   #menuToggle input
@@ -432,12 +449,9 @@ nav .pr.p-search.large.search-btn{
 
   #menu li
   {
-    padding: 24px  0 0 0;
+    margin: 24px  0 0 0;
     transition-delay: 2s;
     text-align: center;
-    .breakpoint-large-down({
-      padding: 18px  0 0 0;
-    })
   }
 
   #menu li a{
@@ -462,10 +476,16 @@ nav .pr.p-search.large.search-btn{
     list-style-type: none!important;
     font-size: 0.8em;
     margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 0;
 
     li{
       padding-right: 0!important;
       padding-top: 0!important;
+      margin-top: 0;
+      a{
+        font-size: 18px!important;
+      }
     }
   }
 
