--- a/partials/memberslist.htm
+++ b/partials/memberslist.htm
@@ -13,21 +13,21 @@
 		<div class="col-xs-2 end-xs plusminus"><span class="plus"></span></div>
 	</div>
 	<div class="row accordion-content" style="display: none;">
-		<div class="col-sm-3 col-xs-12">
+		<div class="col-lg-3 col-sm-6 col-xs-12 mb-2">
 			{%if profile.department %}{{profile.department}}<br> {%endif%}
 			{%if profile.address %}{{profile.address}}<br>{%endif%}
 			{%if profile.phone %}{{profile.phone}}<br>{%endif%}
 			{%if profile.email %}<a href="mailto:{{profile.email}}">{{profile.email}}</a><br>{%endif%}
 		</div>
-		<div class="col-sm-3 col-xs-12">
+		<div class="col-lg-3 col-sm-6 col-xs-12 mb-2">
 			<h4>Participating actions</h4>
 			{{profile.content|raw}}
 		</div>
-		<div class="col-sm-3 col-xs-12">
+		<div class="col-lg-3 col-sm-6 col-xs-12 mb-2">
 			<h4>Working Group</h4>
 			{{wg.getWG(profile.category_id).name}}
 		</div>
-		<div class="col-sm-3 col-xs-12">
+		<div class="col-lg-3 col-sm-6 col-xs-12 mb-2">
 			<h4>Country</h4>
 			{{country.getCountry(profile.country_id).name}}
 		</div>
