--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -32,19 +32,19 @@ theme = "dark-bottom"
 <div class="container-fluid border-box dark-background">{% component 'cookieConsent' %}
 	<div class="container">
 		<div class="row top-xs between-xs footer-menu-container">
-			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
+			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm  mb-2">
 				<div class="head">About</div>
 				{% component 'about_menu' %}
 			</div>
-			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
+			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm">
 				<div class="head">Latest</div>
 				{% component 'latest_menu' %}
 			</div>
-			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
+			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm">
 				<div class="head">Network</div>
 				{% component 'network_menu' %}
 			</div>
-			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
+			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm">
 				{% if (enable_social_media) %}
 				<div class="head">Follow U3G</div>
 				<div class="social-networks">
@@ -68,7 +68,7 @@ theme = "dark-bottom"
 				</div>
 				{% endif %}
 			</div>
-			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
+			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm">
 				<div class="head">Contact us</div>
 				<div class="social-networks contacts col-md-2 col-xs-12 start-md center-xs">
 					<div class="icons mt-1">
@@ -78,7 +78,7 @@ theme = "dark-bottom"
 			</div>
 
 			{%if this.theme.subscribe%}
-			<div class="col-xs-12 col-md-2 start-md center-xs col-sm-6 start-sm">
+			<div class="col-xs-12 col-lg-2 col-md-4 start-md center-xs col-sm-6 start-sm">
 				<div class="head">Stay up to date</div>
 				<div class="mt-1">
 					<a href="{{this.theme.subscribe}}" target="_blank" class="btn btn-primary news-alert"><i class="pr p-subscribe"></i> News alert</a>
@@ -104,7 +104,7 @@ theme = "dark-bottom"
 			<img class="text mr-0" style="height:50px;" src="{{'cost_logo-white.svg'|media}}"/> CA20132
 		</div>
 
-		<div class="col-sm-2 col-xs-12 center-xs"><a style="flex:0 0 auto;" href="/privacy-policy">Privacy Policy</a></div>
-		<div class="col-sm-2 col-xs-12 end-sm center-xs"><div class="powered-by my-1 my-lg-0 px-1 align-items-center end-sm center-xs"><span>Designed and powered by <a href="https://pensoft.net/" target="_blank">Pensoft</a></span></div></div>
+		<div class="col-lg-2 col-sm-2 col-xs-12 center-xs"><a style="flex:0 0 auto;" href="/privacy-policy">Privacy Policy</a></div>
+		<div class="col-lg-3 col-sm-4 col-xs-12 end-sm center-xs"><div class="powered-by my-1 my-lg-0 px-1 align-items-center end-sm center-xs"><span>Designed and powered by <a href="https://pensoft.net/" target="_blank">Pensoft</a></span></div></div>
 	</div>
 </div>
