--- a/assets/less/components/loggedin_menu.less
+++ b/assets/less/components/loggedin_menu.less
@@ -53,8 +53,8 @@
   });
 }
 .nav-item.social a{
-  .breakpoint-small-down({
-    font-size: 65px!important;
+  .breakpoint-huge-down({
+    font-size: 36px!important;
   });
 }
 
