--- a/assets/less/components/timeline.less
+++ b/assets/less/components/timeline.less
@@ -31,7 +31,7 @@
           margin-bottom: 0;
           transition: all .3s ease-in-out;
           box-shadow: none;
-          background: @default-color;
+          background-color: @default-color!important;
           background-position-x: center!important;
           background-position-Y: center!important;
           background-size: cover!important;
