--- a/assets/less/pages/library.less
+++ b/assets/less/pages/library.less
@@ -128,11 +128,12 @@
     display: flex;
     flex-direction: row;
     margin-top: 40px;
-    justify-content: space-between;
-    width: 90%;
+    //justify-content: space-between;
+    width: 100%;
 
     a{
       margin-right: 20px;
+      white-space: nowrap;
       .breakpoint-huge-down({
         white-space: nowrap;
         margin-top: 20px;
