--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -192,15 +192,10 @@ h1.display-1{
         .header-image-bar {
           //height: 100vh;
           height: calc(~"100vh - 75px");
-          //margin-top: 95px;
+          margin-top: 75px;
           position: relative;
           background: url("../../assets/images/homepage_illustration.svg") right center no-repeat!important;
           background-position: contain!important;
-            //.breakpoint-large-down({
-            //  height: calc(~"100vh - 320px");
-            //  margin-top: 320px;
-            //  //background: none!important;
-            //});
           .breakpoint-large-down({
               height: 100vh;
               margin-top: 0;
@@ -293,6 +288,9 @@ h1.display-1{
               color: @primary-color!important;
               line-height: 1.7em;
               font-weight: 600;
+              &:hover{
+                opacity: 0.6;
+              }
             }
           }
 
